#659: Update OpenJDK to version 21